# microservice

./: pyproject.toml  readme.md
src/microservice/: microservice_client.py  microservice_server.py
src/microservice.egg-info/: PKG-INFO  SOURCES.txt
